syntax = "proto3";
package Pylonstech.pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

message GoogleInAppPurchasePackage {
  string PackageName = 1 [(gogoproto.moretags) = "yaml:\"package_name\""];
  string ProductID = 2 [(gogoproto.moretags) = "yaml:\"product_id\""];
  string Amount = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"amount\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"];
}

// CoinIssuer represents an entity or external blockchain
message CoinIssuer {
  string CoinDenom = 1 [(gogoproto.moretags) = "yaml:\"coin_denom\""];
  repeated GoogleInAppPurchasePackage Packages= 2 [(gogoproto.moretags) = "yaml:\"google_iap_packages\"", (gogoproto.nullable) = false];
  string GoogleInAppPurchasePubKey = 3 [(gogoproto.moretags) = "yaml:\"google_iap_pubkey\""];
  string EntityName = 4;
}

message PaymentProcessor {
  string CoinDenom = 1 [(gogoproto.moretags) = "yaml:\"coin_denom\""];
  string pubKey = 2  [(gogoproto.moretags) = "yaml:\"pubkey\""];
  // Represents the percentage retained by the payment processor when new coins are minted. In the range [0, 1), this amount is burned on-chain, actual fee is retained at the source.
  string processingCut = 3 [(gogoproto.moretags) = "yaml:\"processing_cut\"", (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  // Represents the percentage distributed to stakers. In the range [0, 1). The sum with processingCut cannot exceed 1.
  string consensusCut = 4 [(gogoproto.moretags) = "yaml:\"consensus_cut\"", (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  string name = 5;
}

// Params represent the parameters used by the pylons module
message Params {
  option (gogoproto.goproto_stringer)       = false;
  uint64 minNameFieldLength = 1 [(gogoproto.moretags) = "yaml:\"min_name_field_length\""];
  uint64 minDescriptionFieldLength = 2 [(gogoproto.moretags) = "yaml:\"min_description_field_length\""];
  repeated CoinIssuer coinIssuers = 3 [(gogoproto.moretags) = "yaml:\"coin_issuers\"", (gogoproto.nullable) = false];
  repeated PaymentProcessor paymentProcessors = 4 [(gogoproto.moretags) = "yaml:\"payment_processors\"", (gogoproto.nullable) = false];
  string recipeFeePercentage = 5 [(gogoproto.moretags) = "yaml:\"recipe_fee_percentage\"", (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  string itemTransferFeePercentage = 6 [(gogoproto.moretags) = "yaml:\"item_transfer_fee_percentage\"", (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  cosmos.base.v1beta1.Coin UpdateItemStringFee = 7 [(gogoproto.moretags) = "yaml:\"update_item_string_fee\"", (gogoproto.nullable) = false];
  string minTransferFee = 8 [(gogoproto.moretags) = "yaml:\"min_transfer_fee\"", (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"];
  string maxTransferFee = 9 [(gogoproto.moretags) = "yaml:\"max_transfer_fee\"", (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"];
  cosmos.base.v1beta1.Coin UpdateUsernameFee = 10 [(gogoproto.moretags) = "yaml:\"update_username_fee\"", (gogoproto.nullable) = false];
}
