syntax = "proto3";
package pylons.pylons;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "pylons/pylons/trade.proto";
import "pylons/pylons/google_iap_order.proto";
import "pylons/pylons/payment_info.proto";
import "pylons/pylons/redeem_info.proto";
import "pylons/pylons/execution.proto";
import "pylons/pylons/item.proto";
import "pylons/pylons/recipe.proto";
import "pylons/pylons/cookbook.proto";

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

// Msg defines the Msg service.
service Msg {
    rpc AppleIap(MsgAppleIap) returns (MsgAppleIapResponse);
  rpc AddStripeRefund(MsgAddStripeRefund) returns (MsgAddStripeRefundResponse);
// this line is used by starport scaffolding # proto/tx/rpc
  rpc BurnDebtToken(MsgBurnDebtToken) returns (MsgBurnDebtTokenResponse);
  rpc UpdateAccount(MsgUpdateAccount) returns (MsgUpdateAccountResponse);
  rpc FulfillTrade(MsgFulfillTrade) returns (MsgFulfillTradeResponse);
  rpc CreateTrade(MsgCreateTrade) returns (MsgCreateTradeResponse);
  rpc CancelTrade(MsgCancelTrade) returns (MsgCancelTradeResponse);
  rpc CompleteExecutionEarly(MsgCompleteExecutionEarly) returns (MsgCompleteExecutionEarlyResponse);
  rpc TransferCookbook(MsgTransferCookbook) returns (MsgTransferCookbookResponse);
  rpc GoogleInAppPurchaseGetCoins(MsgGoogleInAppPurchaseGetCoins) returns (MsgGoogleInAppPurchaseGetCoinsResponse);
  rpc CreateAccount(MsgCreateAccount) returns (MsgCreateAccountResponse);
  rpc SendItems(MsgSendItems) returns (MsgSendItemsResponse);
  rpc ExecuteRecipe(MsgExecuteRecipe) returns (MsgExecuteRecipeResponse);
  rpc SetItemString(MsgSetItemString) returns (MsgSetItemStringResponse);
  rpc CreateRecipe(MsgCreateRecipe) returns (MsgCreateRecipeResponse);
  rpc UpdateRecipe(MsgUpdateRecipe) returns (MsgUpdateRecipeResponse);
  rpc CreateCookbook(MsgCreateCookbook) returns (MsgCreateCookbookResponse);
  rpc UpdateCookbook(MsgUpdateCookbook) returns (MsgUpdateCookbookResponse);
}

message MsgAppleIap {
  string creator = 1;
  string product_id = 2;
  string purchase_id = 3;
  string receipt_data_base64 = 4;
}

message MsgAppleIapResponse {
}

message MsgAddStripeRefund {
  string creator = 1;
  PaymentInfo payment = 2;
}

message MsgAddStripeRefundResponse {
}

// this line is used by starport scaffolding # proto/tx/message
message MsgBurnDebtToken {
  string creator = 1;
  RedeemInfo redeem_info = 2 [(gogoproto.nullable) = false];
}

message MsgBurnDebtTokenResponse {
}

message MsgUpdateAccount {
  string creator = 1;
  string username = 2;
}

message MsgUpdateAccountResponse {
}

message MsgCreateAccount {
  string creator = 1;
  string username = 2;
  string token = 3;
  string referral_address = 4;
}

message MsgCreateAccountResponse {
}

message MsgFulfillTrade {
  string creator = 1;
  uint64 id = 2;
  uint64 coin_inputs_index = 3;
  repeated ItemRef items = 4 [(gogoproto.nullable) = false];
  repeated PaymentInfo payment_infos = 5 [(gogoproto.nullable) = false];
}

message MsgFulfillTradeResponse {
}

message MsgCreateTrade {
  string creator = 1;
  repeated CoinInput coin_inputs = 2 [(gogoproto.nullable) = false];
  repeated ItemInput item_inputs = 3 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin coin_outputs = 4 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated ItemRef item_outputs = 5 [(gogoproto.nullable) = false];
  string extra_info = 6;
}

message MsgCreateTradeResponse {
  uint64 id = 1;
}

message MsgCancelTrade {
  string creator = 1;
  uint64 id = 2;
}

message MsgCancelTradeResponse { }

message MsgCompleteExecutionEarly {
  string creator = 1;
  string id = 2;
}

message MsgCompleteExecutionEarlyResponse {
  string id = 1;
}

message MsgTransferCookbook {
  string creator = 1;
  string id = 2;
  string recipient = 3;
}

message MsgTransferCookbookResponse {
}

message MsgGoogleInAppPurchaseGetCoins {
  string creator = 1;
  string product_id = 2;
  string purchase_token = 3;
  string receipt_data_base64 = 4;
  string signature = 5;
}

message MsgGoogleInAppPurchaseGetCoinsResponse {
}

message MsgSendItems {
  string creator = 1;
  string receiver = 2;
  repeated ItemRef items = 3 [(gogoproto.nullable) = false];
}

message MsgSendItemsResponse {
}

message MsgExecuteRecipe {
  string creator = 1;
  string cookbook_id = 2;
  string recipe_id = 3;
  uint64 coin_inputs_index = 4;
  repeated string item_ids = 5 [(gogoproto.nullable) = false];
  repeated PaymentInfo payment_infos = 6 [(gogoproto.nullable) = false];
}

message MsgExecuteRecipeResponse {
  string id = 1;
  int64 tx_time =2;
}

message MsgSetItemString {
  string creator = 1;
  string cookbook_id = 2;
  string id = 4;
  string field = 5;
  string value = 6;
}

message MsgSetItemStringResponse {
}

message MsgCreateRecipe {
  string creator = 1;
  string cookbook_id = 2;
  string id = 3;
  string name = 4;
  string description = 5;
  string version = 6;
  repeated CoinInput coin_inputs = 7 [(gogoproto.nullable) = false];
  repeated ItemInput item_inputs = 8 [(gogoproto.nullable) = false];
  EntriesList entries = 9 [(gogoproto.nullable) = false];
  repeated WeightedOutputs outputs = 10 [(gogoproto.nullable) = false];
  int64 block_interval = 11;
  cosmos.base.v1beta1.Coin cost_per_block = 12 [(gogoproto.nullable) = false];
  bool enabled = 13;
  string extra_info = 14;
}

message MsgCreateRecipeResponse {
}

message MsgUpdateRecipe {
  string creator = 1;
  string cookbook_id = 2;
  string id = 3;
  string name = 4;
  string description = 5;
  string version = 6;
  repeated CoinInput coin_inputs = 7 [(gogoproto.nullable) = false];
  repeated ItemInput item_inputs = 8 [(gogoproto.nullable) = false];
  EntriesList entries = 9 [(gogoproto.nullable) = false];
  repeated WeightedOutputs outputs = 10 [(gogoproto.nullable) = false];
  int64 block_interval = 11;
  cosmos.base.v1beta1.Coin cost_per_block = 12 [(gogoproto.nullable) = false];
  bool enabled = 13;
  string extra_info = 14;
}

message MsgUpdateRecipeResponse {
}

message MsgCreateCookbook {
  string creator = 1;
  string id = 2;
  string name = 3;
  string description = 4;
  string developer = 5;
  string version = 6;
  string support_email = 7;
  bool enabled = 8;
}

message MsgCreateCookbookResponse {
}

message MsgUpdateCookbook {
  string creator = 1;
  string id = 2;
  string name = 3;
  string description = 4;
  string developer = 5;
  string version = 6;
  string support_email = 7;
  bool enabled = 8;
}

message MsgUpdateCookbookResponse {
}